JBS-65: added the hostname in the config

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -41,5 +41,5 @@ frontend vip-cinder
 backend cinder-api
     balance roundrobin
     {% for cinder_api_host in cinder_api_hosts %}
-    server {{ cinder_api_host }}:8776 check inter 1s
+    server {{ cinder_api_host.host }} {{ cinder_api_host.ip }}:8776 check inter 1s
     {% endfor %}
