--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -43,3 +43,18 @@ backend cinder-api
     {% for cinder_api_host in cinder_api_hosts %}
     server {{ cinder_api_host.host }} {{ cinder_api_host.ip }}:8776 check inter 1s
     {% endfor %}
+
+frontend vip-galera
+    bind {{ haproxy_vip | mandatory }}:{{ haproxy_mysql_port | default("33306") }}
+    mode tcp
+    option tcplog
+    default_backend galera-vms
+
+backend galera-vms
+    balance roundrobin
+    mode tcp
+    option tcplog
+    default-server inter 1s
+    server {{ mysql_primary_host.host }} {{ mysql_primary_host.ip }}:3306 check
+    server {{ mysql_secondary_host.host }} {{ mysql_secondary_host.ip }}:3306 backup check
+    server {{ mysql_tertiary_host.host }} {{ mysql_tertiary_host.ip }}:3306 backup check
