JBS-61: Updated the galera configuration files to allow it to be deployed on more than 3 nodes.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -55,6 +55,7 @@ backend galera-vms
     mode tcp
     option tcplog
     default-server inter 1s
-    server {{ mysql_primary_host.host }} {{ mysql_primary_host.ip }}:3306 check
-    server {{ mysql_secondary_host.host }} {{ mysql_secondary_host.ip }}:3306 backup check
-    server {{ mysql_tertiary_host.host }} {{ mysql_tertiary_host.ip }}:3306 backup check
+    server {{ mysql_master_host.host }} {{ mysql_master_host.ip }}:3306 check
+    {% for mysql_backup_host in mysql_backup_hosts %}
+    server {{ mysql_backup_host.host }} {{ mysql_backup_host.ip }}:3306 backup check
+    {% endfor %}
