--- a/my.cnf
+++ b/my.cnf
@@ -136,7 +136,7 @@ innodb_flush_log_at_trx_commit=0
 innodb_buffer_pool_size=122M
 wsrep_provider=/usr/lib/galera/libgalera_smm.so
 wsrep_cluster_name="SBS"
-wsrep_cluster_address="gcomm://{{ mysql_primary_host.ip }},{{ mysql_secondary_host.ip }},{{ mysql_tertiary_host.ip }}"
+wsrep_cluster_address="gcomm://{{ mysql_master_host.ip }},{{ mysql_backup_hosts|map(attribute='ip')|join(',') }}"
 wsrep_sst_method=rsync
-wsrep_node_address="{{ mysql_primary_host.ip }}"
-wsrep_node_name="{{ mysql_primary_host.host }}"
+wsrep_node_address="{{ mysql_host.ip }}"
+wsrep_node_name="{{ mysql_host.host }}"
