--- a/keepalived.conf
+++ b/keepalived.conf
@@ -6,6 +6,13 @@ vrrp_script check_haproxy {
     script "/usr/bin/killall -0 haproxy"
     interval 1
 }
+
+# Script used to check if cinder-volume is running
+vrrp_script check_c_vol {
+           script "/usr/bin/killall -0 cinder-volume"
+           interval 1
+}
+
 # The priority specifies the order in which the assigned interface to take over in a failover
 vrrp_instance VI_01 {
     state {{ keepalived_state | default("BACKUP") }}
@@ -23,4 +30,23 @@ vrrp_instance VI_01 {
         auth_type PASS
         auth_pass {{ keepalived_auth_pass | default("sbs@jio") }}
     }
+}
+
+vrrp_instance VI_02 {
+    state {{ keepalived_vol_state | default("MASTER") }}
+    interface {{ keepalived_vol_interface | mandatory }}
+    virtual_router_id {{ keepalived_vol_virtual_router_id | default("87") }}
+    priority {{ keepalived_vol_priority | default("100") }}
+    # The virtual ip address shared between the two load balancers
+    virtual_ipaddress {
+        {{ keepalived_vol_vip | mandatory }}
+    }
+    track_script {
+        check_c_vol
+    }
+    authentication {
+        auth_type PASS
+        auth_pass {{ keepalived_vol_auth_pass | default("sbsvol@jio") }}
+    }
+    notify /usr/local/bin/keepalivednotify.sh
 }
