JBS-82: Updated for cinder-ec2-api service

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -59,3 +59,13 @@ backend galera-vms
     {% for mysql_backup_host in mysql_backup_hosts %}
     server {{ mysql_backup_host.host }} {{ mysql_backup_host.ip }}:3306 backup check
     {% endfor %}
+
+frontend vip-cinder-ec2
+    bind {{ haproxy_vip | mandatory }}:{{ haproxy_cinder_ec2_api_port | default("82") }}
+    default_backend cinder-ec2-api
+
+backend cinder-ec2-api
+    balance roundrobin
+    {% for cinder_ec2_api_host in cinder_ec2_api_hosts %}
+    server {{ cinder_ec2_api_host.host }} {{ cinder_ec2_api_host.ip }}:8788 check inter 1s
+    {% endfor %}
