updating ceph.conf for multiple monitor nodes

--- a/ceph/ceph.conf
+++ b/ceph/ceph.conf
@@ -1,6 +1,6 @@
 [global]
-fsid = {{ cluster-fsid }}
-mon_initial_members = {{ host.hostname }}
+fsid = {{ cluster_fsid }}
+mon_initial_members = {{ mons|map(attribute='hostname')|join(',') }}
 mon_host = {{ host.private_Ip }}
 auth_cluster_required = cephx
 auth_service_required = cephx
