updating mon_host for multiple monitors

--- a/ceph/ceph.conf
+++ b/ceph/ceph.conf
@@ -1,7 +1,7 @@
 [global]
 fsid = {{ cluster_fsid }}
 mon_initial_members = {{ mons|map(attribute='hostname')|join(',') }}
-mon_host = {{ host.private_Ip }}
+mon_host = {{ mons|map(attribute='privateIp')|join(',') }}
 auth_cluster_required = cephx
 auth_service_required = cephx
 auth_client_required = cephx
