--- a/keepalived.conf
+++ b/keepalived.conf
@@ -21,7 +21,7 @@ vrrp_instance VI_01 {
     priority {{ keepalived_priority | default("100") }}
     # The virtual ip address shared between the two load balancers
     virtual_ipaddress {
-        {{ keepalived_vip | mandatory }}
+        {{ keepalived_haproxy_vip | mandatory }}
     }
     track_script {
         check_haproxy
