--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -51,7 +51,7 @@ backend cinder-api
     {% endfor %}
 
 frontend vip-galera
-    bind {{ haproxy_vip | mandatory }}:{{ haproxy_mysql_port | default("33306") }}
+    bind {{ keepalived_haproxy_vip | mandatory }}:{{ haproxy_mysql_port | default("33306") }}
     mode tcp
     option tcplog
     default_backend galera-vms
