--- a/cinder/cinder.conf
+++ b/cinder/cinder.conf
@@ -9,11 +9,16 @@ auth_strategy = keystone
 state_path = /var/lib/cinder
 lock_path = /var/lock/cinder
 volumes_dir = /var/lib/cinder/volumes
-rpc_backend = rabbit
 auth_strategy = keystone
-my_ip = {{ host_ip }}
+my_ip = {{ my_ip }}
 os_region_name = RegionOne
 enabled_backends = ceph
+rpc_zmq_host={{hostname}}
+rpc_zmq_vol_vip={{vol_vip_host}}
+rpc_zmq_matchmaker=ring
+rpc_backend=zmq
+rpc_zmq_ipc_dir=/var/run/cinder
+rpc_zmq_port={{zmq_port}}
 
 backup_driver = cinder.backup.drivers.sbs
 backup_ceph_conf = /etc/ceph/ceph.conf
@@ -24,11 +29,10 @@ backup_ceph_stripe_count = 0
 backup_ceph_pool = sbs
 sbs_access_key = {{ access_key }}
 sbs_secret_key = {{ secret_key }}
-sbs_dss_host = {{dss-endpoint}}
-sbs_container = {{ bucket-name }}
+sbs_dss_host = {{dss_endpoint}}
+sbs_container = {{ bucket_name }}
 
 restore_discard_excess_bytes = true
-#debug=true
 
 enable_v2_api=true
 enable_v1_api=false
@@ -38,21 +42,20 @@ glance_api_servers= {{ glance_endpoint }}
 # Version of the glance API to use (integer value)
 #glance_api_version=2
 
-#glance_api_insecure=true
 
-glance_api_ssl_compression=false
+glance_api_insecure=false
 
 # Location of ca certificates file to use for glance client
 # requests. (string value)
-#glance_ca_certificates_file=<None>
+glance_ca_certificates_file= {{ glance_cerfile }}
 
 glance_request_timeout=1000
 
 
 
 [keystone_authtoken]
-username = {{ keystone_sbs_user }}
-password = {{ keyston_password }}
+username = {{ admin_user }}
+password = {{ admin_password }}
 project_name = services
 
 auth_port=35357
@@ -62,19 +65,12 @@ auth_protocol=https
 auth_host= {{ iam_endpoint }}
 admin_tenant_name= {{ tenant_name }}
 identity_uri = {{ iam_identity_uri }}
-auth_uri = {{ iam_auth_url }}
-#auth_version=V3
+auth_uri = {{ iam_auth_uri }}
+auth_version=V3
 
 [database]
 connection = {{ mysql_connection_string }}
 max_pool_size=5000
-
-#change this to zmq
-[oslo_messaging_rabbit]
-rabbit_host = cinderController
-rabbit_userid = stackrabbit
-rabbit_password = test123
-
 
 [oslo_concurrency]
 lock_path = /var/lock/cinder
