--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -47,7 +47,7 @@ backend cinder-api
     balance roundrobin
     default-server inter 1s
     {% for cinder_api_host in cinder_api_hosts %}
-    server {{ cinder_api_host.host }} {{ cinder_api_host.ip }}:8776 check
+    server {{ cinder_api_host.hostname }} {{ cinder_api_host.ip }}:8776 check
     {% endfor %}
 
 frontend vip-galera
@@ -61,9 +61,9 @@ backend galera-vms
     mode tcp
     option tcplog
     default-server inter 1s
-    server {{ mysql_master_host.host }} {{ mysql_master_host.ip }}:3306 check
+    server {{ mysql_master_host.hostname }} {{ mysql_master_host.ip }}:3306 check
     {% for mysql_backup_host in mysql_backup_hosts %}
-    server {{ mysql_backup_host.host }} {{ mysql_backup_host.ip }}:3306 backup check
+    server {{ mysql_backup_host.hostname }} {{ mysql_backup_host.ip }}:3306 backup check
     {% endfor %}
 
 frontend vip-cinder-ec2
@@ -76,5 +76,5 @@ backend cinder-ec2-api
     balance roundrobin
     default-server inter 1s
     {% for cinder_ec2_api_host in cinder_ec2_api_hosts %}
-    server {{ cinder_ec2_api_host.host }} {{ cinder_ec2_api_host.ip }}:8788 check
+    server {{ cinder_ec2_api_host.hostname }} {{ cinder_ec2_api_host.ip }}:8788 check
     {% endfor %}
