--- a/keepalived.conf
+++ b/keepalived.conf
@@ -1,5 +1,5 @@
 global_defs {
-    router_id {{ keepalived_hostname | mandatory }}
+    router_id {{ hostname | mandatory }}
 }
 # Script used to check if HAProxy is running
 vrrp_script check_haproxy {
