--- a/my.cnf
+++ b/my.cnf
@@ -138,5 +138,5 @@ wsrep_provider=/usr/lib/galera/libgalera_smm.so
 wsrep_cluster_name="SBS"
 wsrep_cluster_address="gcomm://{{ mysql_master_host.ip }},{{ mysql_backup_hosts|map(attribute='ip')|join(',') }}"
 wsrep_sst_method=rsync
-wsrep_node_address="{{ mysql_host.ip }}"
-wsrep_node_name="{{ mysql_host.host }}"
+wsrep_node_address="{{ my_ip }}"
+wsrep_node_name="{{ hostname }}"
