--- a/ceph-clients/ceph.conf
+++ b/ceph-clients/ceph.conf
@@ -1,7 +1,18 @@
 [global]
-fsid = {{ cluster-fsid }}
-mon_initial_members = {{ host.hostname }}
-mon_host = {{ host.privateIp }}
+fsid = {{ cluster_fsid }}
+mon_initial_members = {{ mons|map(attribute='hostname')|join(',') }}
+mon_host = {{ mons|map(attribute='privateIp')|join(',') }}
 auth_cluster_required = cephx
 auth_service_required = cephx
 auth_client_required = cephx
+
+[client]
+rbd cache = true
+rbd cache writethrough until flush = true
+rbd default format = 2
+
+[client.cinder]
+keyring = /etc/ceph/ceph.client.cinder.keyring
+
+[client.cinder-backup]
+keyring = /etc/ceph/ceph.client.cinder-backup.keyring
