--- a/ceph/ceph.conf
+++ b/ceph/ceph.conf
@@ -11,7 +11,7 @@ filestore_op_threads = 4
 ms_nocrc = true
 filestore_fd_cache_size = 64
 filestore_fd_cache_shards = 32
-osd_pool_default_size = 4
+osd_pool_default_size = {{osd_pool_default_size}}
 osd_pool_default_min_size = 2
 
 [mon]
