Added rbd concurrent option to rbd clients
Signed-off-by: shishir gowda <shishir.gowda@ril.com>

--- a/ceph-clients/ceph.conf
+++ b/ceph-clients/ceph.conf
@@ -10,6 +10,11 @@ auth_client_required = cephx
 rbd cache = true
 rbd cache writethrough until flush = true
 rbd default format = 2
+log file = /var/log/ceph/rbd_client.log
+rbd concurrent management ops = 20
+#debug client = 20
+#debug rbd = 20
+#debug librbd = 20
 
 [client.cinder]
 keyring = /etc/ceph/ceph.client.cinder.keyring
