adding complete ssl pem path in haproxy cfg

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -35,7 +35,7 @@ listen monitor
     stats refresh {{ haproxy_stats_refresh | default("5s") }}
 
 frontend https-cinder
-    bind *:443 ssl crt {{ sbs_haproxy_ssl_pem }}
+    bind *:443 ssl crt /etc/haproxy/{{ sbs_haproxy_ssl_pem }}
     reqadd X-Forwarded-Proto:\ https
     default_backend cinder-ec2-api
 
