using same priority variable for VI_02 in keepalived.conf

--- a/keepalived.conf
+++ b/keepalived.conf
@@ -36,7 +36,7 @@ vrrp_instance VI_02 {
     state {{ keepalived_vol_state | default("MASTER") }}
     interface {{ keepalived_vol_interface | mandatory }}
     virtual_router_id {{ keepalived_vol_virtual_router_id | default("87") }}
-    priority {{ keepalived_vol_priority | default("100") }}
+    priority {{ keepalived_priority | default("100") }}
     # The virtual ip address shared between the two load balancers
     virtual_ipaddress {
         {{ keepalived_vol_vip | mandatory }}
