If a host goes down, do not start recovery operations
We have SLA's from h/w team, where if a entire host goes offline,
we do not trigger recovery/migration of data for pg's present in
all those osds of the host.

With the option "mon osd down out subtree limit = host", we are
enabling it, so that osds of the hosts are marked "down",
but not "out"

Note, if a individual osds go down, they get marked as down and out.

Signed-off-by: shishir gowda <shishir.gowda@ril.com>

--- a/ceph/ceph.conf
+++ b/ceph/ceph.conf
@@ -14,9 +14,9 @@ filestore_fd_cache_shards = 32
 osd_pool_default_size = {{osd_pool_default_size}}
 osd_pool_default_min_size = 2
 
-
 [mon]
 mon osd allow primary affinity = true
+mon osd down out subtree limit = host
 
 [osd]
 osd_journal_size = 10000
