Separate keepalived deployment for haproxy & c-vol
Addressed Chirag review comments by rebasing with the latest commit in
master - 965d68a0746b4a10b9221991a889d4de53f92779

Closes-Bug: #JBS-128

--- a/keepalived_c-vol.conf
+++ b/keepalived_c-vol.conf
@@ -3,7 +3,7 @@ global_defs {
 }
 # Script used to check if cinder-volume is running
 vrrp_script check_c_vol {
-           script "/usr/bin/killall -0 cinder-volume"
+           script "sudo /usr/local/bin/keepalivedtrack.sh"
            interval 1
 }
 
