adding cache_waiting_time=6000 in cinder conf

--- a/cinder/cinder.conf
+++ b/cinder/cinder.conf
@@ -1,4 +1,5 @@
 [DEFAULT]
+cache_waiting_time = 6000
 rootwrap_config = /etc/cinder/rootwrap.conf
 api_paste_confg = /etc/cinder/api-paste.ini
 iscsi_helper = tgtadm
