--- a/cinder/cinder.conf
+++ b/cinder/cinder.conf
@@ -28,6 +28,7 @@ backup_ceph_chunk_size = 134217728
 backup_ceph_stripe_unit = 0
 backup_ceph_stripe_count = 0
 backup_ceph_pool = sbs
+rbd_tpool_size= {{ rbd_tpool_size }}
 sbs_access_key = {{ access_key }}
 sbs_secret_key = {{ secret_key }}
 sbs_dss_host = {{dss_endpoint}}
