Making Start stop work in supervisor

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -7,7 +7,7 @@ logfile=/var/log/supervisor/supervisord.log ; (main log file;default $CWD/superv
 logfile_maxbytes=50MB        ; (max main logfile bytes b4 rotation;default 50MB)
 logfile_backups=100           ; (num of main logfile rotation backups;default 10)
 loglevel=debug                ; (log level;default info; others: debug,warn,trace) #debug to trace whats going wrong with telegraf
-pidfile=/tmp/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
+pidfile=/var/run/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
 nodaemon=false               ; (start in foreground if true;default false)
 minfds=1024                  ; (min. avail startup file descriptors;default 1024)
 minprocs=200                 ; (min. avail process descriptors;default 200)
@@ -19,7 +19,7 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 
 [program:telegraf_server]
-command=/usr/bin/telegraf -config /etc/telegraf/tele-prod.conf
+command=/usr/bin/telegraf -pidfile /var/run/telegraf/telegraf.pid -config /etc/telegraf/telegraf.conf -config-directory /etc/telegraf/telegraf.d
 
 [program:metric-agent]
 command=python /usr/lib/python2.7/dist-packages/metricagent/metric_agent.py -s localhost -p /var/log/cinder/service.log
