--- a/telegraf.conf
+++ b/telegraf.conf
@@ -41,6 +41,11 @@
   # Override default hostname, if empty use os.Hostname()
   hostname = ""
 
+  ## Telegraf will cache metric_buffer_limit metrics for each output, and will
+  ## flush this buffer on a successful write.
+  metric_buffer_limit = 1000
+  ## Flush the buffer whenever full, regardless of flush_interval.
+  flush_buffer_when_full = true
 
 ###############################################################################
 #                                  OUTPUTS                                    #
